# chank

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix
docs/: README.md
src/: main.cpp
src/app/: ChatBox.cpp  ChatBox.h  ChatManager.cpp  ChatManager.h  UserManager.h  main.cpp
src/app/class/: Chat.h  Message.h  User.h
src/app/layout/: ChatBox.cpp  ChatBox.h  MessagesBox.h
